--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -360,7 +360,7 @@ textarea {
 	border-radius: 50%;
 	width: 33px;
 	height: 33px;
-	padding: 3px 0 0 0;
+	padding: 5px 0 0 0;
 	font-size: 20px;
 	text-align:center;
 	display: inline-block;
@@ -368,7 +368,7 @@ textarea {
 
 }
 .socialicon:hover {
-	background-color: #fff265;
+	background-color: #f5f5f5;
 }
 
 .social-registration-text {
