--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -274,8 +274,8 @@ textarea#rename {
 	text-decoration: underline;
 }
 .user-links a, span {
-	font-size: 80%;
-	color: #666;
+	font-size: 90%;
+	color: #000;
 }
 .user-links a:hover {
 	color: #000;
@@ -296,7 +296,9 @@ textarea#rename {
 }
 hr {
 	border: 0;
-	border-top: 1px solid #fff265;
+	border-top: 2px solid #fff265;
+	margin-bottom: 15px;
+	margin-right: 25px;
 }
 .user-settings-options .user-email input {
 	width: auto;
@@ -410,9 +412,8 @@ hr {
 .modalButtons{
 	cursor: pointer;
 	margin-right: 10px;
-	padding:5px;
+	padding:10px;
 	text-align: center;
-	font-weight: bold;
 	font-size: 18px;
 }
 
@@ -444,8 +445,8 @@ hr {
 }
 
 #useFree:hover{
-	color:#fff;
-	background: #000;
+	color:#c6c6c6;
+	background: #fff;
 }
 
 #useFree:active{
@@ -463,8 +464,8 @@ hr {
 }
 
 #usePremium:hover{
-	color: #fff56c;
-	background: #e98f2c;
+	color: #f2d32c;
+	background: #fff56c;
 }
 
 #usePremium:active{
@@ -480,8 +481,8 @@ hr {
 }
 
 .planChoice p{
-	font-weight: bold;
-	line-height: .7;
+	font-size: 20px;
+	line-height: .5;
 }
 
 #freePlan{
@@ -505,35 +506,67 @@ hr {
 	position: absolute;
 	right: 45px;
 	top: 35px;
-	color: #fff;
+	color: #fff56c;
 	text-align: right;
 }
 
 #price p{
 	font-size:32px;
+	padding-right: 10px;
 }
 
 #price span{
 	font-size:12px;
-	color:#fff;
+	color:#fff56c;
 }
 
+.inputPayment{
+	float: left;
+	margin-right: 20px;
+	margin-bottom: 40px;
+}
+
+.yellow{
+	color: #fff56c;
+}
+
+.secure-text{
+	text-align: right;
+	float: right;
+	margin-right: 10px;
+	margin-top: -1px;
+}
+
+.input-text{
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+.card-number{
+	margin-top: 0;
+}
+
+.secure-image{
+	float: right;
+	margin-right: 25px;
+}
 
 .upgradePayment{
 	width:400px;
-	height:400px;
+	height:340px;
 	display:inline-block;
 	padding-left:25px;
-	background: #f2f2f2;
+	background: #f2d32c;
 	margin-right:50px;
-	border:4px #fff solid;
+	margin-left: 180px;
+	border:4px #fff56c solid;
 	color: #000;
 }
 
 .paymentButtons{
 	cursor: pointer;
 	margin-right: 10px;
-	padding:10px;
+	padding:10px 50px;
 	width: 150px;
 	text-align: center;
 	font-size: 18px;
@@ -542,10 +575,12 @@ hr {
 
 .paymentButtons#paymentCancel{
 	background: #cccccc;
+	color: #fff;
 }
 
 .paymentButtons#paymentUpgrade{
-	background: #8CC63F;
+	background: #fff56c;
+	color: #e98f2c;
 }
 
 div.m-modals {
