--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -296,7 +296,7 @@ textarea#rename {
 }
 hr {
 	border: 0;
-	border-top: 2px solid #fff265;
+	border-top: 2px solid #fff;
 	margin-bottom: 15px;
 	margin-right: 25px;
 }
@@ -520,10 +520,10 @@ hr {
 	color:#fff56c;
 }
 
-.inputPayment{
+.paymentAir{
 	float: left;
 	margin-right: 20px;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 }
 
 .yellow{
@@ -537,13 +537,33 @@ hr {
 	margin-top: -1px;
 }
 
-.input-text{
+.top-text-card{
+	color: #A9A9A9;
 	margin-bottom: 0;
-	margin-top: 0;
+	margin-top: 30px;
+}
+
+.top-text-expires-cvc{
+	color: #A9A9A9;
+	margin: 0;
 }
 
 .card-number{
 	margin-top: 0;
+}
+
+.inputCardNumber{
+	width: 342px;
+	padding: 10px;
+	font-size: 1.2em;
+	font-family: 'Roboto', Arial, sans-serif;
+}
+
+.inputExpiresCVC{
+	width: 161px;
+	padding: 10px;
+	font-size: 1.2em;
+	font-family: 'Roboto', Arial, sans-serif;
 }
 
 .secure-image{
@@ -553,21 +573,18 @@ hr {
 
 .upgradePayment{
 	width:400px;
-	height:340px;
+	height:410px;
 	display:inline-block;
 	padding-left:25px;
-	background: #f2d32c;
+	background: #EEEEEE;
 	margin-right:50px;
 	margin-left: 180px;
-	border:4px #fff56c solid;
+	border:4px #fff solid;
 	color: #000;
 }
 
 .paymentButtons{
 	cursor: pointer;
-	margin-right: 10px;
-	padding:10px 50px;
-	width: 150px;
 	text-align: center;
 	font-size: 18px;
 	color: #ffffff;
@@ -576,11 +593,16 @@ hr {
 .paymentButtons#paymentCancel{
 	background: #cccccc;
 	color: #fff;
+	float: left;
+	padding:10px 52px;
 }
 
 .paymentButtons#paymentUpgrade{
 	background: #fff56c;
 	color: #e98f2c;
+	float: right;
+	margin-right: 25px;
+	padding:10px 47px;
 }
 
 div.m-modals {
