Added confirmation messages after upgrade and downgrade.
Also, added "Being downgraded..." scenario.

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -443,6 +443,10 @@ hr {
 .upgrade-text-premium {
 	color: #fff;
 }
+.upgrade-text .upgrade-text-being-downgraded {
+	text-decoration: none;
+	color: #fff;
+}
 
 #useFree:hover{
 	color:#c6c6c6;
