--- a/public/create/pages/css/pages/sweetalert2.css
+++ b/public/create/pages/css/pages/sweetalert2.css
@@ -1,5 +1,5 @@
 .sweet-overlay {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   left: 0;
   right: 0;
@@ -10,8 +10,6 @@
 
 .sweet-alert {
   background-color: #fff;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border-radius: 5px;
   box-sizing: border-box;
   text-align: center;
   position: fixed;
@@ -24,7 +22,7 @@
   display: none;
   z-index: 2000; }
   .sweet-alert h2 {
-    color: #575757;
+    color: #000;
     font-size: 30px;
     text-align: center;
     font-weight: 600;
@@ -35,6 +33,7 @@
     line-height: 60px;
     display: block; }
   .sweet-alert p {
+    color: #000;
     font-size: 16px;
     text-align: center;
     font-weight: 300;
@@ -48,14 +47,16 @@
     color: transparent;
     border: 0; }
   .sweet-alert button {
-    color: #fff;
     border: 0;
+    border-left-color:#fff56c;
+    border-right-color:#fff56c;
+    background-color:#fff56c;
     box-shadow: none;
     font-size: 17px;
     font-weight: 500;
-    border-radius: 5px;
     padding: 10px 32px;
     margin: 0 5px;
+    width: 200px;
     cursor: pointer; }
     .sweet-alert button:focus {
       outline: none; }
@@ -99,8 +100,7 @@
         width: 47px;
         background-color: #f27474;
         display: block;
-        top: 37px;
-        border-radius: 2px; }
+        top: 37px; }
         .sweet-alert .icon.error .line.left {
           -webkit-transform: rotate(45deg);
               -ms-transform: rotate(45deg);
@@ -119,7 +119,6 @@
         height: 47px;
         left: 50%;
         top: 10px;
-        border-radius: 2px;
         margin-left: -2px;
         background-color: #f8bb86; }
       .sweet-alert .icon.warning .dot {
@@ -140,7 +139,6 @@
         height: 29px;
         left: 50%;
         bottom: 17px;
-        border-radius: 2px;
         margin-left: -2px;
         background-color: #c9dae1; }
       .sweet-alert .icon.info::after {
@@ -209,7 +207,6 @@
         height: 5px;
         background-color: #a5dc86;
         display: block;
-        border-radius: 2px;
         position: absolute;
         z-index: 2; }
         .sweet-alert .icon.success .line.tip {
