--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,19 +45,16 @@
 }
 
 #socialicons{
-	margin-top: 10px;
+	margin-top: 13px;
 }
 
 a.socialicon {
 	margin: 0 10px 0 0;
-	padding-top: 8px;
-	padding-bottom: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 6px;
 	width: 40px;
 	height: 40px;
 	background-color: #fff; 
-	font-size: 22px; 
+	font-size: 18px; 
 	color: #c6c6c6;
 	text-decoration: none;
 }
@@ -391,9 +388,10 @@ input#mc-embedded-subscribe{
 }
 
 #login {
-	background-color: #c6c6c6;
+	background-color: #cccccc;
 	display:none;
-	padding-top:70px;
+	padding-top:62px;
+	padding-left:22px;
 }
 
 .email, .password {
@@ -427,12 +425,13 @@ input#mc-embedded-subscribe{
 }
 #login-extras{
 	font-size: 0.7em;
+    padding-left: 10px;
 }
 .login-main{
 	float: none;
 }
 #remember{
-	margin:0;
+	margin:3px;
 	padding:0; 
 	display: inline; 
 }
@@ -454,7 +453,7 @@ input#mc-embedded-subscribe{
 }
 
 .login-main input {
-	width: 100%;
+	width: 95%;
 }
 
 .arrow-box {
@@ -506,7 +505,7 @@ input#mc-embedded-subscribe{
 
 @media (min-width:1050px){	
 	#login-wrapper {
-		margin-left: 150px;
+		margin-left: 90px;
 	}
 
 	#features p {
