--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -619,16 +619,23 @@ hr {
 }
 
 .paymentItem:focus{
-	border-color: #0080CC;
+	border-color: #85C0FF;
+	border-style: solid;
+	box-shadow: 0 0 .1875em #85C0FF;
+	border-width: 2px;
 }
 
 .paymentItemValid{
-	border-color: #2ecc71;
+	border-color: #75FFAF;
+	border-style: solid;
+	box-shadow: 0 0 .1875em #75FFAF;
+	border-width: 2px;
 }
 
 .paymentItemValid:focus{
-	border-color: #2ecc71;
-	box-shadow: 0 0 .1875em #2ecc71;
+	border-color: #75FFAF;
+	border-style: solid;
+	box-shadow: 0 0 .1875em #75FFAF;
 	border-width: 2px;
 }
 
