--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -566,8 +566,8 @@ div.m-modals.ng-hide > .modal.ng-enter.ng-enter-active {
 
 #registration-tos-container {
 	position: absolute; /* To avoid affecting the size (height) of the registration bar */
-	margin-left: 465px;
 	padding-top: 2px;
+	width: 300px;
 }
 
 .error-box {
