--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -762,7 +762,7 @@ div.m-modals.ng-hide > .modal.ng-enter.ng-enter-active {
 	color: #000;
 }
 .upgrade-text-premium {
-	color: #fff;
+	color: #fff56c;
 }
 .upgrade-text .upgrade-text-being-downgraded {
 	text-decoration: none;
