Fixes #1040. NB! The code to get the "Upgrade to pro" button to open the upgrade modal is in the "issue-1080" branch.

--- a/public/create/pages/css/pages/create.css
+++ b/public/create/pages/css/pages/create.css
@@ -73,6 +73,11 @@
 	background: url("../../images/ebook_downgraded.svg");
 	background-repeat: no-repeat;
 }
+.project.upgrade-pro {
+	background: url("../../images/ebook_new_upgrade_pro.svg");
+	background-repeat: no-repeat;
+	cursor: pointer;
+}
 
 .project p {
 	display: table-cell;
