--- a/public/create/pages/css/pages/project.css
+++ b/public/create/pages/css/pages/project.css
@@ -128,15 +128,16 @@
 }
 .documents-options-bottom-buttons a, .stylesets-options-bottom-buttons a {
 	float: left;
-	padding: 5px;
-	width: calc(100% / 3);;
-	padding-left: 15px;
-	display: block;
-	text-decoration: underline;
-	cursor: pointer;
-	background-color: #000;
-	color: #fff;
-	border-right: 2px solid #fff;
+    padding: 5px;
+    width: calc(100% / 3);
+    padding-left: 8px;
+    display: block;
+    text-decoration: underline;
+    cursor: pointer;
+    background-color: #000;
+    color: #fff;
+    border-right: 2px solid #fff;
+    text-align: center;
 }
 .documents-options-bottom-buttons a.open, .stylesets-options-bottom-buttons a.open {
 	background-color: #fff;
@@ -226,8 +227,7 @@
 	height: 95px;
 	background: none #fefefe;
 	float: left;
-	border: 1px solid #e6e6e6;
-	box-shadow: 0px 5px 5px -5px #ccc;
+	border: 2px solid #e6e6e6;
 	cursor: pointer;
 }
 .projectDocument-link {
@@ -236,7 +236,8 @@
 }
 .projectDocument.new {
 	padding-top: 15px;
-	border: 1px dashed #eee;
+	background-color: #F3F3F3;
+    border: 2px dashed #fff;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -250,6 +251,17 @@
 	text-align: center;
 	overflow: hidden;
 }
+
+.projectDocument h2 {
+	color: #fff;
+    height: 62px;
+    margin: 0px 5px 5px;
+    text-align: center;
+    overflow: hidden;
+    font-weight: 100;
+    font-size: 54px;
+}
+
 .projectDocument.selected {
 	border: 2px solid #000;
 }
@@ -414,7 +426,7 @@ ul, li {
 .typo p {
 	padding: 15px;
 	margin: 0;
-	border: 1px solid #e6e6e6;
+	border: 2px solid #e6e6e6;
 	background: none #fff;
 }
 .typo.new p {
@@ -433,10 +445,10 @@ ul, li {
 .typo-children-style {
 	position: relative;
 	background-color: #fff;
-	border: 1px solid #e6e6e6;
+	border: 2px solid #000;
 	padding: 12px;
 	width: 90%;
-	margin: 0 auto;
+	margin: -2px auto;
 }
 .typo-children-style.selected {
 	background-color: #c3c3c3;
@@ -497,7 +509,7 @@ li.typo .style-copy-options p {
 }
 .menu-options {
 	display: block;
-	text-align: center;
+	text-align: left;
 }
 .left-menu-options-parameters div {
 	display: none;
@@ -787,7 +799,7 @@ input[type="submit"]{
 	right: 0;
 	background-color: #f2d32c;
 	border: 2px solid #fff56c;
-	padding: 0px 5px 0px 5px;
+	padding: 3px 6px 3px 6px;
 	font-size: 0.8em;
 	color:  #fff56c;
 }
