--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -1022,3 +1022,32 @@ div.m-modals.ng-hide > .modal.ng-enter.ng-enter-active {
 	margin-right: 25px;
 	padding:10px 47px;
 }
+
+/* Loading mask */
+.loading-animation {
+	z-index: 101;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: transparent url("../../../../images/scripler_is_working.gif") no-repeat center;
+
+}
+.loading-mask {
+	z-index: 100;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-moz-opacity: 0.7;
+	opacity: .70;
+	filter: alpha(opacity=70);
+	background-color: #eee;
+	width: 100%;
+	height: 100%;
+	zoom: 1;
+}
+
+.upgradePayment {
+	position: relative;
+}
