--- a/public/create/pages/css/shared/default.css
+++ b/public/create/pages/css/shared/default.css
@@ -988,9 +988,9 @@ div.m-modals.ng-hide > .modal.ng-enter.ng-enter-active {
 
 .upgradePayment{
 	width:400px;
-	height:515px;
 	display:inline-block;
 	padding-left:25px;
+	padding-bottom: 25px;
 	background: #EEEEEE;
 	margin-right:50px;
 	margin-left: 180px;
